cmake_minimum_required(VERSION 3.23)
project(OBC_SDK C)

set(CMAKE_C_STANDARD 11)

include_directories(Appl)
include_directories(Drivers/CMSIS)
include_directories(Drivers/CMSIS/Device)
include_directories(Drivers/CMSIS/Device/ST)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx/Include)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/Sensors)
include_directories(Drivers/STM32F4xx_HAL_Driver/Inc)
include_directories(Drivers/STM32F4xx_HAL_Driver/Inc/Legacy)
include_directories(Middlewares)
include_directories(Middlewares/Inc)
include_directories(Middlewares/Third_Party/FatFs/src)
include_directories(Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS)
include_directories(Middlewares/Third_Party/FreeRTOS/Source/include)
include_directories(Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F)

add_executable(OBC_SDK
        Appl/ADCS.c
        Appl/ADCS.h
        Appl/ADCSFunctions.c
        Appl/ADCSFunctions.h
        Appl/AppTasks.c
        Appl/AppTasks.h
        Appl/BatteryCapacity.c
        Appl/BatteryCapacity.h
        Appl/CySatHealthChecks.h
        Appl/CySatPacketProtocol.c
        Appl/CySatPacketProtocol.h
        Appl/EPS.c
        Appl/EPS.h
        Appl/GroundStation.c
        Appl/GroundStation.h
        Appl/helper_functions.c
        Appl/helper_functions.h
        Appl/main.c
        Appl/main.h
        Appl/OBC.h
        Appl/Payload.c
        Appl/Payload.h
        Appl/test.c
        Appl/test.h
        Appl/UHF.c
        Appl/UHF.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f427xx.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
        Drivers/CMSIS/Include/arm_common_tables.h
        Drivers/CMSIS/Include/arm_const_structs.h
        Drivers/CMSIS/Include/arm_math.h
        Drivers/CMSIS/Include/cmsis_armcc.h
        Drivers/CMSIS/Include/cmsis_armcc_V6.h
        Drivers/CMSIS/Include/cmsis_gcc.h
        Drivers/CMSIS/Include/core_cm0.h
        Drivers/CMSIS/Include/core_cm0plus.h
        Drivers/CMSIS/Include/core_cm3.h
        Drivers/CMSIS/Include/core_cm4.h
        Drivers/CMSIS/Include/core_cm7.h
        Drivers/CMSIS/Include/core_cmFunc.h
        Drivers/CMSIS/Include/core_cmInstr.h
        Drivers/CMSIS/Include/core_cmSimd.h
        Drivers/CMSIS/Include/core_sc000.h
        Drivers/CMSIS/Include/core_sc300.h
        Drivers/Sensors/adis16265.h
        Drivers/Sensors/ais328dq_driver.c
        Drivers/Sensors/ais328dq_driver.h
        Drivers/Sensors/component.h
        Drivers/Sensors/hmc5883l.c
        Drivers/Sensors/hmc5883l.h
        Drivers/Sensors/LIS3MDL_MAG_driver.c
        Drivers/Sensors/LIS3MDL_MAG_driver.h
        Drivers/Sensors/panels.c
        Drivers/Sensors/panels.h
        Drivers/Sensors/sensor.h
        Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32_assert_template.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_can.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cec.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_conf_template.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cortex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_crc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cryp.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cryp_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dac.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dac_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dcmi.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dcmi_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dfsdm.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma2d.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dsi.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_eth.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ramfunc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_fmpi2c.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_fmpi2c_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hash.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hash_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hcd.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2s.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2s_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_irda.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_iwdg.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_lptim.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_ltdc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_ltdc_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_mmc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_nand.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_nor.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pccard.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_qspi.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rng.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sai.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sai_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sd.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sdram.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_smartcard.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spdifrx.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spi.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sram.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_usart.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_wwdg.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_adc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_bus.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_cortex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_crc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_dac.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_dma.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_dma2d.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_exti.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_fmc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_fsmc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_gpio.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_i2c.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_iwdg.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_lptim.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_pwr.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_rcc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_rng.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_rtc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_sdmmc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_spi.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_system.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_tim.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_usart.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_usb.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_utils.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_wwdg.h
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_can.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cec.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_crc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cryp.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cryp_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dcmi.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dcmi_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dfsdm.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma2d.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dsi.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_eth.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_fmpi2c.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_fmpi2c_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hash.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hash_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hcd.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_irda.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_iwdg.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_lptim.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_ltdc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_ltdc_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_mmc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_nand.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_nor.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pccard.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_qspi.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rng.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sai.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sai_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sd.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sdram.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_smartcard.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spdifrx.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sram.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_usart.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_wwdg.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_adc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_crc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_dac.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_dma.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_dma2d.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_exti.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_fmc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_fsmc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_gpio.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_i2c.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_lptim.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_pwr.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_rcc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_rng.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_rtc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_sdmmc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_spi.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_tim.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usart.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usb.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_utils.c
        Middlewares/Inc/bsp_driver_sd.h
        Middlewares/Inc/fatfs.h
        Middlewares/Inc/ffconf.h
        Middlewares/Inc/FreeRTOSConfig.h
        Middlewares/Inc/ProcessData.h
        Middlewares/Inc/rtwtypes.h
        Middlewares/Inc/sd_diskio.h
        Middlewares/Inc/stm32f4xx_hal_conf.h
        Middlewares/Inc/stm32f4xx_it.h
        Middlewares/Inc/User_types.h
        Middlewares/Inc/version.h
        Middlewares/Src/bsp_driver_sd.c
        Middlewares/Src/fatfs.c
        Middlewares/Src/freertos.c
        Middlewares/Src/sd_diskio.c
        Middlewares/Src/stm32f4xx_hal_msp.c
        Middlewares/Src/stm32f4xx_hal_timebase_TIM.c
        Middlewares/Src/stm32f4xx_it.c
        Middlewares/Src/system_stm32f4xx.c
        Middlewares/Third_Party/FatFs/src/option/syscall.c
        Middlewares/Third_Party/FatFs/src/diskio.c
        Middlewares/Third_Party/FatFs/src/diskio.h
        Middlewares/Third_Party/FatFs/src/ff.c
        Middlewares/Third_Party/FatFs/src/ff.h
        Middlewares/Third_Party/FatFs/src/ff_gen_drv.c
        Middlewares/Third_Party/FatFs/src/ff_gen_drv.h
        Middlewares/Third_Party/FatFs/src/ffconf_template.h
        Middlewares/Third_Party/FatFs/src/integer.h
        Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c
        Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.h
        Middlewares/Third_Party/FreeRTOS/Source/include/croutine.h
        Middlewares/Third_Party/FreeRTOS/Source/include/deprecated_definitions.h
        Middlewares/Third_Party/FreeRTOS/Source/include/event_groups.h
        Middlewares/Third_Party/FreeRTOS/Source/include/FreeRTOS.h
        Middlewares/Third_Party/FreeRTOS/Source/include/FreeRTOSConfig_template.h
        Middlewares/Third_Party/FreeRTOS/Source/include/list.h
        Middlewares/Third_Party/FreeRTOS/Source/include/mpu_prototypes.h
        Middlewares/Third_Party/FreeRTOS/Source/include/mpu_wrappers.h
        Middlewares/Third_Party/FreeRTOS/Source/include/portable.h
        Middlewares/Third_Party/FreeRTOS/Source/include/projdefs.h
        Middlewares/Third_Party/FreeRTOS/Source/include/queue.h
        Middlewares/Third_Party/FreeRTOS/Source/include/semphr.h
        Middlewares/Third_Party/FreeRTOS/Source/include/StackMacros.h
        Middlewares/Third_Party/FreeRTOS/Source/include/task.h
        Middlewares/Third_Party/FreeRTOS/Source/include/timers.h
        Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c
        Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/portmacro.h
        Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c
        Middlewares/Third_Party/FreeRTOS/Source/croutine.c
        Middlewares/Third_Party/FreeRTOS/Source/event_groups.c
        Middlewares/Third_Party/FreeRTOS/Source/list.c
        Middlewares/Third_Party/FreeRTOS/Source/queue.c
        Middlewares/Third_Party/FreeRTOS/Source/tasks.c
        Middlewares/Third_Party/FreeRTOS/Source/timers.c
        Middlewares/DAT_Inputs.c
        Middlewares/DAT_Inputs.h
        Middlewares/DAT_Outputs.c
        Middlewares/DAT_Outputs.h
        Middlewares/MCU_Init.c
        Middlewares/MCU_Init.h)
